[gd_scene load_steps=16 format=3 uid="uid://c4xpygxgyqvuj"]

[ext_resource type="PackedScene" uid="uid://3kakuo1t52tf" path="res://Pelota.tscn" id="1_0cxl6"]
[ext_resource type="Script" uid="uid://w6ogfghjmwg0" path="res://nivel_bot.gd" id="1_eclk4"]
[ext_resource type="PackedScene" uid="uid://c0fodfhg4ub6p" path="res://Suelo.tscn" id="2_eclk4"]
[ext_resource type="PackedScene" uid="uid://c23g7bcggsxts" path="res://Arco.tscn" id="3_uam75"]
[ext_resource type="PackedScene" uid="uid://bboxamrs10kjv" path="res://Arco2.tscn" id="4_3mjbb"]
[ext_resource type="PackedScene" uid="uid://dexgcu6vmqq1a" path="res://source/Source/Saha.fbx" id="5_3ghjj"]
[ext_resource type="Texture2D" uid="uid://bgfkeq38pep4o" path="res://ffffff.jpg" id="6_flj6i"]
[ext_resource type="PackedScene" uid="uid://cai8my4dwvcjf" path="res://Jugador.tscn" id="7_puf0x"]
[ext_resource type="PackedScene" uid="uid://bd5kyqscq67ue" path="res://Bot.tscn" id="8_5crrd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dbwke"]
sky_top_color = Color(0.184314, 0.207843, 0.752941, 1)
sky_horizon_color = Color(1, 0.470588, 0.588235, 1)
ground_horizon_color = Color(0.738634, 0.684557, 0.60375, 1)
energy_multiplier = 0.5

[sub_resource type="Sky" id="Sky_spw24"]
sky_material = SubResource("ProceduralSkyMaterial_dbwke")

[sub_resource type="Environment" id="Environment_puf0x"]
background_mode = 2
sky = SubResource("Sky_spw24")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mhcqa"]
albedo_texture = ExtResource("6_flj6i")

[sub_resource type="QuadMesh" id="QuadMesh_0cxl6"]
material = SubResource("StandardMaterial3D_mhcqa")

[sub_resource type="FontVariation" id="FontVariation_eclk4"]

[node name="NivelBot" type="Node3D"]
script = ExtResource("1_eclk4")

[node name="Jugador" parent="." node_paths=PackedStringArray("pelota") instance=ExtResource("7_puf0x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.708435, 1.46069, 0)
pelota = NodePath("../Pelota")

[node name="Bot" parent="." node_paths=PackedStringArray("pelota", "arco_enemigo") instance=ExtResource("8_5crrd")]
transform = Transform3D(-0.0162483, 0, -0.999868, 0, 1, 0, 0.999868, 0, -0.0162483, -0.933245, 1.42735, -29.0949)
pelota = NodePath("../Pelota")
arco_enemigo = NodePath("../StaticBody3D")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_puf0x")

[node name="Pelota" parent="." instance=ExtResource("1_0cxl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.02974, -15.3189)
mass = 2.0
gravity_scale = 0.7
contact_monitor = true
max_contacts_reported = 5

[node name="CollisionShape3D" parent="." instance=ExtResource("2_eclk4")]
transform = Transform3D(54.1927, 0, 0, 0, 1, 0, 0, 0, 66.7592, -0.146134, -0.0987148, -11.0932)

[node name="StaticBody3D" parent="." instance=ExtResource("3_uam75")]
transform = Transform3D(3.41708, 0, 0, 0, 4.25, 0, 0, 0, 1, -2.8579, 1.17637, 10.2937)

[node name="Area3D" parent="StaticBody3D" index="3"]
equipo = "Casa"

[node name="StaticBody3D3" parent="." instance=ExtResource("3_uam75")]
transform = Transform3D(3.41708, 0, 0, 0, 4.25, 0, 0, 0, 1, -2.8579, 1.17637, 10.2937)

[node name="StaticBody3D2" parent="." instance=ExtResource("4_3mjbb")]
transform = Transform3D(3.36233, 0, 0, 0, 2.86001, 0, 0, 0, 1, -2.64232, 1.83274, -40.0358)

[node name="Saha" parent="." instance=ExtResource("5_3ghjj")]
transform = Transform3D(-0.129852, 0, -29.9997, 0, 30, 0, 29.9997, 0, -0.129852, -1.2745, -10.6553, -14.3817)

[node name="CollisionShape3D2" parent="." instance=ExtResource("2_eclk4")]
transform = Transform3D(-0.00661769, -1, 0, 54.1927, -0.000122114, 0, 0, 0, 66.7592, -23.5338, 10.3644, -13.5847)

[node name="CollisionShape3D3" parent="." instance=ExtResource("2_eclk4")]
transform = Transform3D(-0.00661769, -1, 0, 54.1927, -0.000122114, 0, 0, 0, 66.7592, 21.1573, 10.3644, -13.5847)

[node name="CollisionShape3D4" parent="." instance=ExtResource("2_eclk4")]
transform = Transform3D(2.28686e-05, 0.00345579, -66.7588, 54.1927, -0.000122114, 0, -0.00661765, -0.999994, -0.230706, -5.42545, 10.3644, 11.4636)

[node name="CollisionShape3D5" parent="." instance=ExtResource("2_eclk4")]
transform = Transform3D(2.28686e-05, 0.00345579, -66.7588, 54.1927, -0.000122114, 0, -0.00661765, -0.999994, -0.230706, -5.42545, 10.3644, -40.4024)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0278394, 0, -0.992341, 0, 6.04009, 0, 12.5594, 0, -0.00219965, 20.46, 5.32039, -14.4326)
mesh = SubResource("QuadMesh_0cxl6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 88.0
offset_top = -7.0
offset_right = 134.0
offset_bottom = 103.0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_eclk4")
theme_override_font_sizes/font_size = 80
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 221.0
offset_top = -6.0
offset_right = 267.0
offset_bottom = 104.0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontVariation_eclk4")
theme_override_font_sizes/font_size = 80
text = "0"

[node name="LabelTiempo" type="Label" parent="CanvasLayer"]
offset_left = 141.0
offset_top = 114.0
offset_right = 249.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[editable path="StaticBody3D"]
[editable path="StaticBody3D3"]
